# spektral

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  search.html  setup.py  sitemap.xml
.github/workflows/: examples.yml  (+2 more)
.well-known/: brave-rewards-verification.txt
about/: index.html
acknowledgements/: index.html
brain/: index.html
chem/: index.html
creating-dataset/: index.html
creating-layer/: index.html
data/: index.html
data-modes/: index.html
datasets/: index.html
docs/: CNAME  autogen.py  build.sh  local_build.sh  mkdocs.yml
examples/: classification_BDGC_disjoint.py  classification_BDGC_graph_batch.py  classification_delaunay.py  graph_signal_classification_mnist.py  index.html  node_classification_arma.py  node_classification_cheb.py  node_classification_gat.py  node_classification_gcn.py  node_classification_ogb_gcn.py  node_classification_simple_gc.py  node_clustering_mincut.py  regression_molecules.py  regression_molecules_batch.py  regression_molecules_disjoint.py  regression_molecules_graph_batch.py  semi_sup_classification_cheb.py  semi_sup_classification_gat.py  semi_sup_classification_gcn.py  semi_sup_classification_simple_gc.py
geometric/: index.html
getting-started/: index.html
loaders/: index.html
models/: index.html
papers/: index.html
search/: search_index.json
spektral/: __init__.py  brain.py  chem.py  session.py
stylesheets/: extra.css
tests/: test_datasets.py  test_utils.py
transforms/: index.html
(+279 files in other folders)
